--- a/micons_landing/package.json
+++ b/micons_landing/package.json
@@ -7,8 +7,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "react-awesome-lightbox": "^1.8.1",
     "react-dom": "^18.2.0",
+    "react-image-viewer": "^0.1.0",
+    "react-images-viewer": "^1.7.1",
+    "react-multi-carousel": "^2.8.4",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
